<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <data>

        <variable
            name="songObject"
            type="com.mondia.model.entity.home.Song" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grad">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:scaleY="-1"
            android:src="@drawable/ic_home_color_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/v_song_details_line"
            android:layout_width="@dimen/dp50w"
            android:layout_height="@dimen/dp5h"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp8w"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_album_details_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16w"
            android:layout_marginTop="@dimen/dp16w"
            android:layout_marginEnd="@dimen/dp16w"
            android:fontFamily="@font/fredoka_one_regular"
            android:text="@string/song_details_releases"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sp20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_song_details_line" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_song_details_image_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp250w"
            app:cardCornerRadius="@dimen/dp34w"
            app:cardUseCompatPadding="true"
            card_view:cardElevation="@dimen/dp8w"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_album_details_artist">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:imageUrl="@{songObject.songImage}" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_song_details_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16w"
            android:layout_marginEnd="@dimen/dp16w"
            android:fontFamily="@font/fredoka_one_regular"
            android:text="@string/home_song_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sp24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_song_details_image_container"
            app:text="@{songObject.songTitle}" />

        <TextView
            android:id="@+id/tv_song_details_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16w"
            android:layout_marginEnd="@dimen/dp16w"
            android:fontFamily="@font/arial"
            android:text="@string/home_song_artist_name"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sp16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_song_details_name"
            app:text="@{songObject.songArtist}" />


        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/slider_song_details_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16w"
            android:layout_marginTop="@dimen/dp8w"
            android:layout_marginEnd="@dimen/dp16w"
            android:stepSize="0.01"
            android:progress="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_song_details_artist"
            app:tickColorInactive="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/ll_song_details_duration_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16w"
            android:layout_marginEnd="@dimen/dp16w"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slider_song_details_bar">

            <TextView
                android:id="@+id/tv_song_details_start_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/arial"
                android:gravity="start"
                android:text="@string/song_details_start_duration"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp12" />

            <TextView
                android:id="@+id/tv_song_details_end_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/arial"
                android:gravity="end"
                android:text="@string/song_details_end_duration"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp12"
                app:text="@{String.valueOf(songObject.songDuration)}" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_song_details_play_music_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp24w"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_song_details_duration_container">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp25h"
                android:layout_weight="1"
                android:src="@drawable/ic_backward" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp25h"
                android:layout_weight="1"
                android:src="@drawable/ic_play" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp25h"
                android:layout_weight="1"
                android:scaleX="-1"
                android:src="@drawable/ic_backward" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24w"
            android:layout_marginTop="@dimen/dp40w"
            android:layout_marginEnd="@dimen/dp24w"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_song_details_play_music_container">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp25h"
                android:layout_weight="1"
                android:src="@drawable/ic_shuffle" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp25h"
                android:layout_weight="1"
                android:src="@drawable/ic_volume" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp25h"
                android:layout_weight="1"
                android:scaleX="-1"
                android:src="@drawable/ic_queue_music" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>