<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="homeListener"
            type="com.mondia.ui.home.HomeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/motion_home_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:scaleX="-1"
            android:src="@drawable/ic_home_color_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




        <androidx.cardview.widget.CardView
            android:id="@+id/cv_home_search_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16w"
            android:layout_marginTop="@dimen/dp16w"
            android:layout_marginEnd="@dimen/dp16w"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="@dimen/dp16w"
            card_view:cardElevation="@dimen/dp4w"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp45h"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_home_songs_search"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start|center"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:gravity="start|center"
                    android:hint="@string/home_search_title"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="@dimen/dp8w"
                    android:singleLine="true"
                    android:textSize="@dimen/sp15" />

                <TextView
                    android:id="@+id/tv_home_song_search_click"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:background="@color/colorRed"
                    android:onClick="@{()->homeListener.onSearchClicked(etHomeSongsSearch)}"
                    android:padding="@dimen/dp8w"
                    app:drawableLeftCompat="@drawable/item_search" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tv_home_albums_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16w"
            android:layout_marginTop="@dimen/dp16w"
            android:layout_marginEnd="@dimen/dp16w"
            android:fontFamily="@font/fredoka_one_regular"
            android:text="@string/home_albums_title"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_home_search_container" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_home_albums_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp200w"
            android:layout_marginStart="@dimen/dp16w"
            android:layout_marginLeft="@dimen/dp16w"
            android:layout_marginTop="@dimen/dp8w"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_home_albums_title"
            tools:listitem="@layout/item_album" />

        <TextView
            android:id="@+id/tv_home_songs_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16w"
            android:layout_marginTop="@dimen/dp8w"
            android:layout_marginEnd="@dimen/dp16w"
            android:fontFamily="@font/fredoka_one_regular"
            android:text="@string/home_song_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sp24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_home_albums_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_home_songs_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16w"
            android:layout_marginLeft="@dimen/dp16w"
            android:layout_marginTop="@dimen/dp8w"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_home_songs_title"
            tools:listitem="@layout/item_song" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
